# magicplot

./: .gitattributes  .gitignore  MANIFEST.in  README.md  analysisPane.py  aoPlot.py  aoPlot.ui  getData.py  magicPlot.py  magicPlot.ui  magicPlot_ui.py  pyproject.toml  setup.py  shapeDrawer.py  shapeDrawer.ui  shapeDrawer_ui.py  shapeHolder.py  simplePlot.py  subscribeWindow.ui  subscribeWindow_ui.py
doc/: Makefile  make.bat
doc/source/: analysis.rst  conf.py  index.rst  magicplot.rst  shapes.rst  transforms.rst
magicPlot/: __init__.py  analysisPane.py  analysisPane.ui  shapeDrawer.py  simplePlot.py
magicplot/: __init__.py  _version.py  analysisPane.py  analysisPane_test.py  analysisPane_ui.py  analysisPlugins.py  grid.py  magicPlot.py  magicPlot_ui.py  magicplot.py  shapeDrawer.py  shapeDrawer.ui  shapeDrawer_ui.py  shapeHolder.py  transformPlugins.py  transforms.py
magicplot/plugins/analysis/: Strehl.py  code.py
magicplot/plugins/transforms/: add.py  log.py
plugins/: Average.py  ShowData.py  code.py
plugins/analysis/: Gradient.py
plugins/transforms/: fft2d.py  log.py
test/: live.py  testplot.py
